crates/vite_task_bin/tests/e2e_snapshots/fixtures/glob-base-test/snapshots/root glob - matches src files.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run root-glob-test
$ print-file src/root.ts
export const root = 'initial';
> replace-file-content src/root.ts initial modified

> vp run root-glob-test
$ print-file src/root.ts ✗ cache miss: content of input 'src/root.ts' changed, executing
export const root = 'modified';
