crates/vite_task_bin/tests/e2e_snapshots/fixtures/glob-base-test/snapshots/root glob - subpackage path unmatched by relative glob.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run root-glob-test
$ vtt print-file src/root.ts
export const root = 'initial';
> vtt replace-file-content packages/sub-pkg/src/sub.ts initial modified

> vt run root-glob-test
$ vtt print-file src/root.ts ◉ cache hit, replaying
export const root = 'initial';

---
vt run: cache hit, <duration> saved.
