crates/vite_task_bin/tests/e2e_snapshots/fixtures/glob-base-test/snapshots/root glob with cwd - glob relative to package not cwd.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run root-glob-with-cwd
~/src$ print-file root.ts
export const root = 'initial';
> replace-file-content src/root.ts initial modified

> vp run root-glob-with-cwd
~/src$ print-file root.ts ✗ cache miss: 'src/root.ts' modified, executing
export const root = 'modified';
