crates/vite_task_bin/tests/e2e_snapshots/fixtures/glob-base-test/snapshots/subpackage glob - matches own src files.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run sub-pkg#sub-glob-test
~/packages/sub-pkg$ print-file src/sub.ts
export const sub = 'initial';
> replace-file-content packages/sub-pkg/src/sub.ts initial modified

> vp run sub-pkg#sub-glob-test
~/packages/sub-pkg$ print-file src/sub.ts ✗ cache miss: 'packages/sub-pkg/src/sub.ts' modified, executing
export const sub = 'modified';
