crates/vite_task_bin/tests/e2e_snapshots/fixtures/glob-base-test/snapshots/subpackage glob - root path unmatched by relative glob.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run sub-pkg#sub-glob-test
~/packages/sub-pkg$ vtt print-file src/sub.ts
export const sub = 'initial';
> vtt replace-file-content src/root.ts initial modified

> vt run sub-pkg#sub-glob-test
~/packages/sub-pkg$ vtt print-file src/sub.ts ◉ cache hit, replaying
export const sub = 'initial';

---
vt run: cache hit, <duration> saved.
