crates/vite_task_bin/tests/e2e_snapshots/fixtures/glob-base-test/snapshots/subpackage glob with cwd - glob relative to package not cwd.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run sub-pkg#sub-glob-with-cwd
~/packages/sub-pkg/src$ print-file sub.ts
export const sub = 'initial';
> replace-file-content packages/sub-pkg/src/sub.ts initial modified

> vt run sub-pkg#sub-glob-with-cwd
~/packages/sub-pkg/src$ print-file sub.ts ✗ cache miss: 'packages/sub-pkg/src/sub.ts' modified, executing
export const sub = 'modified';
